0.11.104
	+ Bugfix: Don't assume timecol is 'timestamp' but defined by
	module developer. This allows to purge some logs tables again
	+ Add page titles to models
0.11.103
	+ Modify EBox::Types::HasMany to create directory based on its row 
	+ Add _setRelationship method to set up relationships between models
	  and submodels
	+ Use the new EBox::Model::Row api
	+ Add help method to EBox::Types::Abstract
	+ Decrease size for percentage value in disk free watcher
	+ Increase channel link field size in RSS dispatcher
0.11.102
	+ Bugfix: cmp in EBox::Types::HostIP now sorts correctly
	+ updatedRowNotify in EBox::Model::DataTable receives old row as
	well as the recently updated row
	+ Added `override_user_modification` configuration parameter to
	avoid user modification checkings and override them without asking
	+ Added EBox::Model::Row to ease the management of data returned
	by models
	+ Added support to pre-save and post-save executable files. They
	must be placed at /etc/ebox/pre-save or /etc/ebox/post-save
	+ Added `findRow` method to ease find and set
0.11.101
	+ Bugfix: Fix memory leak in models while cloning types. Now
	cloning is controlled by clone method in types
	+ Bugfix: Union type now checks for its uniqueness
	+ DESTROY is not an autoloaded method anymore
	+ HasOne fields now may set printable value from the foreign field
	to set its value
	+ findId now searches as well using printableValue
	+ Bugfix. Minor bug found when key is an IP address in autoloaded
	methods
	+ Ordered tables may insert values at the beginning or the end of
	the table by "insertPosition" attribute
	+ Change notConfigured template to fix English and add link to the
	  module status section
	+ Add loading gif to module status actions
	+ Remove debug from ServiceInterface.pm
	+ Add support for custom separators to be used as index separators on
	  exposedMethods
	+ Bugfix. Stop eBox correctly when it's removed
	+ Improve apache-restart to make it more reliable.
0.11.100